# opencircle_module

./: Readme.md  __init__.py  context_builder.py  models.py  orchestrator.py  pyproject.toml  registry.py  requirements.txt  utils.py
providers/: __init__.py  anthropic_provider.py  base.py  factory.py  google_provider.py  groq_provider.py  nvidia_provider.py  openai_provider.py  openrouter_provider.py
system_prompts/: __init__.py  creative.txt  debate.txt  default.txt  loader.py  technical.txt
