[project]
name = "opencircle-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.114.0",
    "google-generativeai>=0.8.6",
    "groq>=1.5.0",
    "langsmith>=0.9.4",
    "openai>=2.44.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
    "typing-extensions>=4.12.2",
]
